--- a/index.html
+++ b/index.html
@@ -27,11 +27,6 @@ a{color:var(--accent);text-decoration:none;}
 form{background:var(--surface);padding:24px;border-radius:var(--radius);box-shadow:0 8px 24px rgba(2,6,23,0.5);}
 label{display:block;margin-bottom:6px;color:var(--muted);}
 input,textarea,select{width:100%;padding:10px 12px;margin-bottom:16px;border-radius:8px;border:1px solid rgba(255,255,255,0.03);background:rgba(255,255,255,0.02);color:var(--text);font-size:15px;resize:vertical;}
-input[type="file"]{display:none;}
-.dropzone{padding:20px;border:2px dashed var(--muted);border-radius:12px;text-align:center;color:var(--muted);cursor:pointer;margin-bottom:16px;transition:all .2s;}
-.dropzone.dragover{border-color:var(--accent);color:var(--accent);}
-.preview{margin-top:8px;}
-.preview img{max-width:100%;border-radius:8px;}
 .confirmation{display:none;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);padding:16px;border-radius:10px;text-align:center;color:var(--accent);margin-top:12px;}
 footer{text-align:center;color:var(--muted);font-size:14px;margin-top:32px;}
 </style>
@@ -47,7 +42,7 @@ footer{text-align:center;color:var(--muted);font-size:14px;margin-top:32px;}
   <section class="section" aria-labelledby="form-heading">
     <h2 id="form-heading">Submit an Issue</h2>
 
-    <form id="issueForm" action="https://formspree.io/f/xkgpwyzr" method="POST" enctype="multipart/form-data">
+    <form id="issueForm" action="https://formspree.io/f/xkgpwyzr" method="POST">
       <label for="name">Name *</label>
       <input type="text" id="name" name="name" placeholder="Your name" required>
 
@@ -66,11 +61,6 @@ footer{text-align:center;color:var(--muted);font-size:14px;margin-top:32px;}
       <label for="description">Issue Description *</label>
       <textarea id="description" name="description" rows="5" placeholder="Describe your issue" required></textarea>
 
-      <label>Optional Screenshot</label>
-      <div class="dropzone" id="dropzone">Drag & Drop image here or click to browse</div>
-      <input type="file" id="screenshot" name="screenshot" accept="image/*">
-      <div class="preview" id="preview"></div>
-
       <button type="submit" class="btn">Submit Issue</button>
       <div class="confirmation" id="confirmation">
         ✅ Thank you! Your issue has been submitted. Expect a reply in 24–48 hours.
@@ -88,49 +78,17 @@ document.getElementById('year').textContent = new Date().getFullYear();
 
 const form = document.getElementById('issueForm');
 const confirmation = document.getElementById('confirmation');
-const dropzone = document.getElementById('dropzone');
-const fileInput = document.getElementById('screenshot');
-const preview = document.getElementById('preview');
 
-// Drag & Drop handlers
-dropzone.addEventListener('click', () => fileInput.click());
-dropzone.addEventListener('dragover', e => { e.preventDefault(); dropzone.classList.add('dragover'); });
-dropzone.addEventListener('dragleave', e => { e.preventDefault(); dropzone.classList.remove('dragover'); });
-dropzone.addEventListener('drop', e => {
-  e.preventDefault();
-  dropzone.classList.remove('dragover');
-  if(e.dataTransfer.files.length){
-    fileInput.files = e.dataTransfer.files;
-    showPreview(e.dataTransfer.files[0]);
-  }
-});
-
-// File input change
-fileInput.addEventListener('change', () => {
-  if(fileInput.files.length) showPreview(fileInput.files[0]);
-});
-
-function showPreview(file){
-  preview.innerHTML = '';
-  const img = document.createElement('img');
-  img.src = URL.createObjectURL(file);
-  img.onload = () => URL.revokeObjectURL(img.src);
-  preview.appendChild(img);
-}
-
-// Form submission
 form.addEventListener('submit', async function(e){
   e.preventDefault();
   const data = new FormData(form);
   try {
     const response = await fetch(form.action, {
       method: form.method,
-      body: data,
-      headers: { 'Accept': 'application/json' }
+      body: data
     });
     if(response.ok){
       form.reset();
-      preview.innerHTML = '';
       confirmation.style.display = 'block';
     } else {
       alert('Oops! There was a problem submitting your issue.');
@@ -141,4 +99,4 @@ form.addEventListener('submit', async function(e){
 });
 </script>
 </body>
-  </html>
+                                                   </html>
