Update form action URL in index.html
Signed-off-by: X-net <zaaidd01@gmail.com>

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <p>Social Media Experts • Submit your issue and get help within 24–48 hours.</p>
     </header>
 
-    <form id="issueForm" action="https://formspree.io/f/xkgpwyzr" method="POST">
+    <form id="issueForm" action="https://formspree.io/f/xovpabeo" method="POST">
       <label>
         Name *
         <input type="text" name="name" required />
